Fix dark mode

--- a/src/assets/styles/_branding.scss
+++ b/src/assets/styles/_branding.scss
@@ -10,6 +10,11 @@
   --gradientEnd: #f783ac;
   --gradient: linear-gradient(45deg, var(--gradientStart) 10%, var(--gradientEnd) 90%);
 
+  @media (prefers-color-scheme: dark) {
+    --color-text: #fff;
+    --color-background: #222;
+    --color-light: #333;
+  }
 
   /**
     Spacing and units
@@ -22,16 +27,10 @@
   */
   --font-family-sans-serif: -apple-system, BlinkMacSystemFont, "Segoe UI", Roboto, Helvetica, Arial, sans-serif, "Apple Color Emoji", "Segoe UI Emoji", "Segoe UI Symbol";
 
-
-  @media (prefers-color-scheme: dark) {
-    --color-text: #fff;
-    --color-background: #222;
-  }
-
   /**
     Borders
   */
-  --border-gradient: linear-gradient(white, white) padding-box,
+  --border-gradient: linear-gradient(var(--color-background), var(--color-background)) padding-box,
               linear-gradient(to right, #7950f2, #f783ac) border-box;
 
   /**
