--- a/src/assets/styles/styles.scss
+++ b/src/assets/styles/styles.scss
@@ -9,6 +9,7 @@
  * ZeroPoint starter styling
 */
 body {
+  background-color: var(--color-background);
   color: var(--color-text);
   font-family: var(--font-family-sans-serif);
   padding: 0 var(--unit);
